fix(tab): color token and gap corrections

--- a/src/components/reusable/tabs/tab.scss
+++ b/src/components/reusable/tabs/tab.scss
@@ -81,14 +81,15 @@
 
     &:hover,
     &.selected:hover {
-      background: var(--kd-color-background-button-secondary-state-hover);
-      border-color: var(--kd-color-border-button-tertiary-state-hover);
+      background: var(--kd-color-background-button-tertiary-state-hover);
+      border-color: var(--kd-color-border-button-secondary-state-hover);
+      color: var(--kd-color-text-level-primary);
     }
 
     &:active,
     &.selected:active {
-      background: var(--kd-color-background-button-tertiary-state-pressed);
-      border-color: var(--kd-color-background-button-secondary-state-hover);
+      background: var(--kd-color-background-button-primary-state-pressed);
+      border-color: var(--kd-color-border-button-secondary-state-hover);
       color: var(--kd-color-text-level-light);
     }
   }
@@ -119,7 +120,7 @@
 
   &.disabled {
     color: var(--kd-color-text-link-level-disabled);
-    border-bottom: 1px solid var(--kd-color-border-variants-light);
+    // border-color: 1px solid var(--kd-color-border-ui-disabled);
     cursor: not-allowed;
   }
 }
